# isotools

./: .gitignore  Untitled-Copy1.ipynb  Untitled1.ipynb  isotools_pilot_analysis_no_clustering.ipynb  mypy.ini  pyproject.toml  stats.py
docs/: conf.py
isotools/: __init__.py  _gene_plots.py  _transcriptome_filter.py  _transcriptome_io.py  _transcriptome_stats.py  _utils.py  gene.py  plots.py  run_isotools.py  splice_graph.py  transcriptome.py
notebooks/: Untitled1.ipynb  manuscript.ipynb
src/isotools/: __init__.py  _gene_plots.py  _transcriptome_filter.py  _transcriptome_io.py  _transcriptome_stats.py  _utils.py  debugging.py  decorators.py  gene.py  logger.py  plots.py  run_isotools.py  short_read.py  splice_graph.py  transcriptome.py
tests/: altsplice_tests.py  differential_splicing_test.py  splice_graph_tests.py  test_intron_retention.py  transcriptome_test.py  truncation_tests.py
